Título de la noticia o cambio realizado

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <br>
             <h2 style=" font-weight: bolder; letter-spacing: -1px;">Mantente informado con las noticias más recientes de Ecuador, minuto a minuto. Política, economía, sucesos, deportes, clima y más… ¡Todo en un solo lugar y al instante!</h2>
  <br><br>
+ <h1 style="font-family: Arial, Helvetica, sans-serif; font-weight: bolder; letter-spacing: -1px; color: chocolate;">NOTICIA DE MENTIRA</h1>
+<h2 style="font-weight:lighter ; letter-spacing: -1px;">El presidente Donald Trump anunció el ataque a objetivos estratégicos, marcando un hito histórico al ser la primera incursión de fuerzas estadounidenses en zonas bajo control del régimen de Maduro.</h2> 
+<br><br><br><br>
+
+            <br><br>
  <h1 style="font-family: Arial, Helvetica, sans-serif; font-weight: bolder; letter-spacing: -1px; color: chocolate;">EE.UU. confirma primera ofensiva militar contra el narcotráfico en territorio venezolano</h1>
 <h2 style="font-weight:lighter ; letter-spacing: -1px;">El presidente Donald Trump anunció el ataque a objetivos estratégicos, marcando un hito histórico al ser la primera incursión de fuerzas estadounidenses en zonas bajo control del régimen de Maduro.</h2> 
 <br><br><br><br>
